infrastructure-gateway/overlays/dell7040/infrastructure-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infrastructure-gateway
  namespace: infrastructure
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      lb.cilium.io/pool: lab
  listeners:
    - hostname: "longhorn.lab.definit.co.uk"
      name: lab-https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-server-tls
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All
    - hostname: "monitoring.lab.definit.co.uk"
      name: monitoring-https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: monitoring-server-tls
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All
    - hostname: "management.lab.definit.co.uk"
      name: lab-http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - hostname: "auth.lab.definit.co.uk"
      name: auth-https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: auth-server-tls
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All
